# DeepLabCut-Live-Pytorch

./: README.md  pyproject.toml
src/dlc-live-torch/: __main__.py  app.py  config.py  inference.py  widgets.py  workers.py
